<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Midterm</string>
    <string name="n">Đồ Ăn</string>
    <string name="item_1">Item 1</string>
    <string name="_50">$50</string>
    <string name="add_item">Add Item</string>
    <string name="pets">Pets</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="pet1">pet1</string>
    <string name="mark">Mark</string>
    <string name="month_s">month(s)</string>
    <string name="background">Background</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="avatar">Avatar</string>
    <string name="my_name">Ngô Hồng Phương Vy</string>
    <string name="mail">205141100112@sv.ute.udn.vn</string>
    <string name="notice">🥇🥉 Pets is my lover. 😎😎</string>
    <string name="tv_bio">PearUK is Le Anh Quoc\nStanding at airport Waiting for train</string>
    <string name="bio">Bio</string>
    <string name="gallery">Gallery</string>
    <string name="images">Images</string>
    <string name="links">Links</string>
    <string name="link_social">Link Social</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="pass">Password</string>
    <string name="forget">Forget password?</string>
    <string name="is_has_account">Don\'t have account?</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="okko">Agree with </string>
    <string name="term">Terms and conditions</string>
    <string name="is_has_account_yet">Had account?</string>

</resources>