<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_rectangle"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/item_1"
            android:textColor="?attr/colorOnSurface"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/gender"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_day"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="@id/tv_day"
            tools:ignore="ImageContrastCheck" />
        
        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/item_1"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@id/tv_time"
            app:layout_constraintStart_toEndOf="@id/day"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <ImageView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/gender"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_access_time_filled_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/item_1"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/tv_day" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:shape="rectangle"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/pet1"
                android:scaleType="centerInside"
                android:src="@drawable/td1"
                android:background="@color/green_light"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>