<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_image_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:0.6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.47" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.53" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline65"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline50"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1.0" />

            <TextView
                android:id="@+id/iv_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="Profile"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/asian_young_girl_holding_kittens_park"
                app:layout_constraintDimensionRatio="1:0.45"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_logout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:src="@drawable/logout_white_36dp"
                app:layout_constraintEnd_toEndOf="@id/iv_background"
                app:layout_constraintTop_toTopOf="@id/iv_background" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:shape="ring"
                app:cardCornerRadius="150dp"
                app:layout_constraintBottom_toBottomOf="@id/guideline50"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/guideline65"
                app:layout_constraintStart_toStartOf="@id/guideline35">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/pet1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/z3792450303993_8405b8e7fcec020c45f2eac7cc1a833e"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_image_info">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_name"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mail"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:background="@android:color/transparent"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_editprofile"
                app:layout_constraintBottom_toBottomOf="@id/tv_editprofile" />

            <TextView
                android:id="@+id/tv_editprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile edit"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp" />

            <View
                android:id="@+id/v_dotted_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/dotted_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_editprofile" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:background="@android:color/transparent"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_history"
                app:layout_constraintBottom_toBottomOf="@id/tv_history" />

            <TextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Challenge history"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/v_dotted_line"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/v_dotted_line5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/dotted_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:background="@android:color/transparent"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_settings"
                app:layout_constraintBottom_toBottomOf="@id/tv_settings" />

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/v_dotted_line5"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/v_dotted_line6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/dotted_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_settings" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
